--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,4 +1,4 @@
-/* Globals */
+Globals
 
 
 /* Buttons */
@@ -9,7 +9,7 @@
 
 /* Scaffolding */
 .site-wrapper{display:table;width:100%;height:100vh;min-height:100vh;}
-.site-wrapper-inner{display:flex;flex-direction:column;justify-content:center;margin-right:auto;margin-left:auto;width:100%;height:100vh;}
+.site-wrapper-inner{display:flex;flex-direction:column;justify-content:center;}
 .panel-authed{padding:0 0 0 0;}
 
 /* Home button */
